Actualizacion del codigo
Actualizacion del codigo

--- a/producto6/Investing - Fabalella.ipynb
+++ b/producto6/Investing - Fabalella.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8d2c9f7c",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d23c655f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# definir ruta_descarga a gusto\n",
-    "ruta_descarga = r\"C:\\Users\\David Valenzuela\\Downloads\\Untitled Folder\\WebScraping Desa\\BolsaSantiago\" \n",
+    "ruta_descarga = r\"/Users/fabianfigueroa/Documents/GitHub/WebScrapingMDS/producto6/Datos-financieros\" \n",
     "\n",
     "options = Options()\n",
     "options.add_experimental_option(\"prefs\", {\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3a315119",
    "metadata": {},
    "outputs": [
@@ -79,9 +79,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David Valenzuela\\AppData\\Local\\Temp\\ipykernel_59832\\874622609.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "[WDM] - Downloading: 100%|██████████| 8.04M/8.04M [00:00<00:00, 10.8MB/s]\n",
+      "/var/folders/8r/9j8g7p3j5xg1c9w0tnjgzpzr0000gn/T/ipykernel_11994/874622609.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser  = webdriver.Chrome(ChromeDriverManager().install(), chrome_options=options)\n",
-      "C:\\Users\\David Valenzuela\\AppData\\Local\\Temp\\ipykernel_59832\\874622609.py:2: DeprecationWarning: use options instead of chrome_options\n",
+      "/var/folders/8r/9j8g7p3j5xg1c9w0tnjgzpzr0000gn/T/ipykernel_11994/874622609.py:2: DeprecationWarning: use options instead of chrome_options\n",
       "  browser  = webdriver.Chrome(ChromeDriverManager().install(), chrome_options=options)\n"
      ]
     }
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "91bf6f35",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "d8c55621",
    "metadata": {},
    "outputs": [],
@@ -144,7 +145,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "id": "120d4777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ssl\n",
+    "\n",
+    "try:\n",
+    "    _create_unverified_https_context = ssl._create_unverified_context\n",
+    "except AttributeError:\n",
+    "    # Legacy Python that doesn't verify HTTPS certificates by default\n",
+    "    pass\n",
+    "else:\n",
+    "    # Handle target environment that doesn't support HTTPS verification\n",
+    "    ssl._create_default_https_context = _create_unverified_https_context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aaa4f93c",
    "metadata": {},
    "outputs": [],
@@ -156,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "82a7e65a",
    "metadata": {},
    "outputs": [],
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "45fcd4bf",
    "metadata": {},
    "outputs": [],
@@ -179,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "710db02a",
    "metadata": {},
    "outputs": [],
@@ -190,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c57f41a7",
    "metadata": {},
    "outputs": [],
@@ -218,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "db71cf9b",
    "metadata": {},
    "outputs": [],
@@ -233,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "760a7784",
    "metadata": {},
    "outputs": [],
@@ -243,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "5ad6e968",
    "metadata": {},
    "outputs": [],
@@ -275,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dcb2de74",
    "metadata": {},
    "outputs": [],
@@ -300,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "73a8bc54",
    "metadata": {},
    "outputs": [],
@@ -331,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0c8760be",
    "metadata": {},
    "outputs": [],
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8ab9637e",
    "metadata": {},
    "outputs": [],
@@ -357,185 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "2665ed03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Vol</th>\n",
-       "      <th>ChangePercent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-09-02</td>\n",
-       "      <td>2398.9</td>\n",
-       "      <td>2223.2</td>\n",
-       "      <td>2398.9</td>\n",
-       "      <td>2200.2</td>\n",
-       "      <td>5.84M</td>\n",
-       "      <td>9.04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022-09-01</td>\n",
-       "      <td>2200.0</td>\n",
-       "      <td>2110.0</td>\n",
-       "      <td>2200.0</td>\n",
-       "      <td>2055.1</td>\n",
-       "      <td>5.79M</td>\n",
-       "      <td>4.17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022-08-31</td>\n",
-       "      <td>2112.0</td>\n",
-       "      <td>2169.9</td>\n",
-       "      <td>2220.0</td>\n",
-       "      <td>2100.0</td>\n",
-       "      <td>9.14M</td>\n",
-       "      <td>-4.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022-08-30</td>\n",
-       "      <td>2200.0</td>\n",
-       "      <td>2170.0</td>\n",
-       "      <td>2219.8</td>\n",
-       "      <td>2140.0</td>\n",
-       "      <td>4.36M</td>\n",
-       "      <td>1.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022-08-29</td>\n",
-       "      <td>2160.0</td>\n",
-       "      <td>2120.0</td>\n",
-       "      <td>2169.0</td>\n",
-       "      <td>2120.0</td>\n",
-       "      <td>6.91M</td>\n",
-       "      <td>1.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>2022-01-07</td>\n",
-       "      <td>2500.0</td>\n",
-       "      <td>2550.0</td>\n",
-       "      <td>2571.0</td>\n",
-       "      <td>2465.0</td>\n",
-       "      <td>4.97M</td>\n",
-       "      <td>-1.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>2022-01-06</td>\n",
-       "      <td>2549.0</td>\n",
-       "      <td>2535.0</td>\n",
-       "      <td>2574.0</td>\n",
-       "      <td>2519.9</td>\n",
-       "      <td>2.47M</td>\n",
-       "      <td>0.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>2022-01-05</td>\n",
-       "      <td>2535.0</td>\n",
-       "      <td>2575.9</td>\n",
-       "      <td>2575.9</td>\n",
-       "      <td>2509.9</td>\n",
-       "      <td>1.42M</td>\n",
-       "      <td>-0.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>2022-01-04</td>\n",
-       "      <td>2549.0</td>\n",
-       "      <td>2651.0</td>\n",
-       "      <td>2651.0</td>\n",
-       "      <td>2509.0</td>\n",
-       "      <td>1.72M</td>\n",
-       "      <td>-3.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>2022-01-03</td>\n",
-       "      <td>2650.0</td>\n",
-       "      <td>2774.7</td>\n",
-       "      <td>2774.8</td>\n",
-       "      <td>2650.0</td>\n",
-       "      <td>1.39M</td>\n",
-       "      <td>-4.64</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>172 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date   Price    Open    High     Low    Vol  ChangePercent\n",
-       "0   2022-09-02  2398.9  2223.2  2398.9  2200.2  5.84M           9.04\n",
-       "1   2022-09-01  2200.0  2110.0  2200.0  2055.1  5.79M           4.17\n",
-       "2   2022-08-31  2112.0  2169.9  2220.0  2100.0  9.14M          -4.00\n",
-       "3   2022-08-30  2200.0  2170.0  2219.8  2140.0  4.36M           1.85\n",
-       "4   2022-08-29  2160.0  2120.0  2169.0  2120.0  6.91M           1.81\n",
-       "..         ...     ...     ...     ...     ...    ...            ...\n",
-       "167 2022-01-07  2500.0  2550.0  2571.0  2465.0  4.97M          -1.92\n",
-       "168 2022-01-06  2549.0  2535.0  2574.0  2519.9  2.47M           0.55\n",
-       "169 2022-01-05  2535.0  2575.9  2575.9  2509.9  1.42M          -0.55\n",
-       "170 2022-01-04  2549.0  2651.0  2651.0  2509.0  1.72M          -3.81\n",
-       "171 2022-01-03  2650.0  2774.7  2774.8  2650.0  1.39M          -4.64\n",
-       "\n",
-       "[172 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "datos_df_limpio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f09c493f",
    "metadata": {},
    "outputs": [],
@@ -547,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6957ad9d",
    "metadata": {},
    "outputs": [],
@@ -583,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.0"
   },
   "toc": {
    "base_numbering": 1,
